sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:3: error: ':' expected but ',' found.
  def triInsertion(gap,debut){
                      ^AlgShellSort:21: error: identifier expected but '}' found.
}
^